# do-prototype

./: .dockerignore  .gitignore  Dockerfile  README.md  about-8ly.md  messages.toml  pyproject.toml
do/: agents.py  app.py  auth.py  configs.py  db_models.py  emails.py  exception_handlers.py  task_views.py  views.py  websocket_handlers.py
do/agents/: __init__.py  base_agent.py  do_agent.py  email_agent.py  flowstate_agent.py  learn_more_agent.py  login_agent.py  models.py  suggested_actions_agent.py  utils.py
do/chats/: __init__.py  base_chat.py  do_chat.py  flowstate_chat.py  learn_more.py  login.py  utils.py
do/utils/: __init__.py  messages.py
docs/: about-8ly.md  do.afdesign  faq.md  project-plan.md  roadmap.md
docs/design-concepts/: do.afdesign
flowstate/: agents.py  app.py  auth.py  db_models.py  dependencies.py  emails.py  exception_handlers.py  task_views.py  views.py  websocket_handlers.py
flowstate/agents/: __init__.py  base_agent.py  email_agent.py  flowstate_agent.py  learn_more_agent.py  login_agent.py  suggested_actions_agent.py  task_agent.py  utils.py
flowstate/api/: main.py  models.py
flowstate/chats/: __init__.py  flowstate_chat.py  learn_more.py  login.py  tasks.py
flowstate/templates/: dashboard.html  email_sent.html  learn_more.html  login.html  project.html  task_base.html  task_calendar.html  task_create.html  task_todo.html
flowstate/utils/: __init__.py  messages.py
k8s/: deploy.yaml  pvc.yaml  site.yaml
resources/templates/: 404.html  base.html  dashboard.html  email_sent.html  learn_more.html  login.html  project.html  task_base.html  (+2 more)
tests/: test_api.py  test_auth.py  test_db.py
(+7 files in other folders)
