[project]
name = "flowstate-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.167.0",
    "google-auth>=2.39.0",
    "google-auth-oauthlib>=1.2.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "starlette>=0.46.2",
    "uvicorn>=0.34.1",
    "xai-sdk>=0.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
