[project]
name = "do-prototype"
version = "0.1.0"
description = "Do - Task Management That's Innately You"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.1",
    "duckduckgo-search>=8.0.1",
    "httpx>=0.28.1",
    "humanize>=4.12.3",
    "jinja2>=3.1.6",
    "pydantic-ai-slim>=0.1.4",
    "python-multipart>=0.0.20",
    "starlette>=0.46.2",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
